openshift/01_deployment.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: nu-was-demo
  name: nu-was-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: nu-was-demo
    deploymentconfig: nu-was-demo
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: nu-was-demo
        deploymentconfig: nu-was-demo
    spec:
      containers:
        - image: quay.io/kenmoini/nu-was-demo
          imagePullPolicy: Always
          name: nu-was-demo
          ports:
            - name: 9080-tcp
              containerPort: 9080
              protocol: TCP
            - name: 9043-tcp
              containerPort: 9043
              protocol: TCP
            - name: 9443-tcp
              containerPort: 9443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
