openshift/02_hitcount_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nu-was-demo-hitcount-svc
spec:
  selector:
    app: nu-was-demo
  ports:
    - name: 9080-tcp
      protocol: TCP
      port: 9080
      targetPort: 9080
