openshift/03_hitcount_route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nu-was-demo-hitcount-rt
  annotations:
    haproxy.router.openshift.io/rewrite-target: /hitcount
spec:
  to:
    kind: Service
    name: nu-was-demo-hitcount-svc
    weight: 100
  port:
    targetPort: "9080-tcp"
  wildcardPolicy: None
  path: /
